[Wen Fu] finish homework.

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,10 @@ configurations {
 }
 
 repositories {
-  mavenCentral()
+  maven { url 'https://maven.aliyun.com/repository/jcenter' }
+  maven { url 'https://maven.aliyun.com/repository/google' }
+  maven { url 'https://maven.aliyun.com/repository/central' }
+  maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
 }
 
 dependencies {
